--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
   "presets": [
     [
-      "@babel/env",
+      "@babel/preset-env",
       {
+        "targets": {
+          "node": "current"
+        },
         "modules": false
       }
     ],
