--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/register": "^7.9.0",
     "core-js": "^3.6.5",
+    "koa": "^2.12.0",
+    "koa-static": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
