--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@types/express": "^4.17.7",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "@types/webpack-dev-middleware": "^3.7.1",
     "@types/webpack-hot-middleware": "^2.25.3",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
