--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.7",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/require-from-string": "^1.2.0",
     "@types/webpack-dev-middleware": "^3.7.1",
     "@types/webpack-hot-middleware": "^2.25.3",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
