--- a/package.json
+++ b/package.json
@@ -19,42 +19,43 @@
   },
   "homepage": "https://github.com/shianqi/ssr#readme",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@types/express": "^4.17.7",
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@types/express": "^4.17.8",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/require-from-string": "^1.2.0",
-    "@types/webpack-dev-middleware": "^3.7.1",
+    "@types/webpack-dev-middleware": "^3.7.2",
     "@types/webpack-hot-middleware": "^2.25.3",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^9.0.1",
+    "prettier": "^2.1.1",
+    "prettier-eslint": "^9.0.2",
     "react-refresh": "^0.8.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/register": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/register": "^7.11.5",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
-    "koa": "^2.12.0",
+    "koa": "^2.13.0",
     "koa-static": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
