--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run build && node index.js",
-    "build": "webpack --config ./config/webpack.config.client.js"
+    "dev": "ts-node server/index.ts"
   },
   "repository": {
     "type": "git",
@@ -28,8 +27,8 @@
     "@types/require-from-string": "^1.2.0",
     "@types/webpack-dev-middleware": "^3.7.2",
     "@types/webpack-hot-middleware": "^2.25.3",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "babel-loader": "^8.1.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
@@ -41,8 +40,9 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
     "prettier": "^2.1.1",
-    "prettier-eslint": "^9.0.2",
+    "prettier-eslint": "^11.0.0",
     "react-refresh": "^0.8.3",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
