--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,34 @@
+// {
+//   "compilerOptions": {
+//     "module": "esnext",
+
+//     "preserveConstEnums": true,
+//     "removeComments": false,
+//     "target": "esnext",
+
+//     "forceConsistentCasingInFileNames": true,
+//     "resolveJsonModule": true,
+//     "isolatedModules": true
+//   },
+// }
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "preserve",
-    "lib": ["dom", "es2017"],
-    "module": "esnext",
+    "target": "es2018",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "noEmit": true,
+    "jsx": "preserve",
+    "lib": ["esnext", "esnext.asynciterable", "dom"],
+    "esModuleInterop": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "preserveConstEnums": true,
-    "removeComments": false,
-    "skipLibCheck": true,
+    "allowJs": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext",
-
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true
+    "noEmit": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "skipLibCheck": true
   },
   "exclude": ["node_modules", "dist"],
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
