--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
-    "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/require-from-string": "^1.2.0",
     "@types/webpack-dev-middleware": "^3.7.2",
@@ -71,7 +70,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
-    "react-redux": "^7.2.1",
+    "react-redux": "6.0.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
