--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development BABEL_ENV=development ts-node server/index.ts"
+    "clean": "rm -rf ./dist",
+    "dev": "npm run clean && NODE_ENV=development BABEL_ENV=development ts-node server/index.ts"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "@types/require-from-string": "^1.2.0",
     "@types/webpack-dev-middleware": "^3.7.2",
     "@types/webpack-hot-middleware": "^2.25.3",
+    "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
@@ -51,11 +53,13 @@
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
