--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
     "jsx": "react",
-    "lib": [
-      "esnext", "esnext.asynciterable", "dom"],
+    "lib": ["esnext", "esnext.asynciterable", "dom"],
     "esModuleInterop": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
