--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "require-from-string": "^2.0.2",
-    "serialize-javascript": "^5.0.1"
+    "serialize-javascript": "^5.0.1",
+    "typesafe-actions": "^5.1.0"
   }
 }
