--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "paths": {
       "~/*": ["src/*"],
     }
