--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.12.1",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.14.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/express": "^4.17.8",
     "@types/loadable__component": "^5.13.1",
     "@types/loadable__server": "^5.12.3",
@@ -54,6 +55,7 @@
     "eslint-plugin-standard": "^4.0.2",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
+    "react-refresh": "^0.9.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3",
@@ -75,7 +77,6 @@
     "koa-static": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
