--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.14.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/express": "^4.17.8",
+    "@types/koa": "^2.11.6",
     "@types/loadable__component": "^5.13.1",
     "@types/loadable__server": "^5.12.3",
     "@types/loadable__webpack-plugin": "^5.7.1",
@@ -72,8 +72,8 @@
     "@loadable/component": "^5.14.1",
     "@loadable/server": "^5.14.0",
     "core-js": "^3.6.5",
-    "express": "^4.17.1",
-    "koa": "^2.13.0",
+    "koa": "^2.13.1",
+    "koa-connect": "^2.1.0",
     "koa-static": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
